Colored active items in split list

--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/style.css
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/style.css
@@ -292,7 +292,8 @@ a.secondaryButton:hover,a.secondaryButton:focus {
 }
 
 .splitItemSelected {
-  border: 1px solid blue !important;
+  /* border: 1px solid blue !important; */
+  background-color:#657BF7;
 }
 
 .disabled {
