--- a/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
@@ -16,7 +16,7 @@ table tr:hover a:hover { text-decoration: underline!important; }
 .layout-float-left { float: left; }
 .clear {clear:both; height: 0px; width: 0px;}
 .center { text-align: center;}
-.recordings-page {margin-left: 30px; margin-right: 30px;}
+.recordings-page {margin-left: 5px; margin-right: 5px;}
 
 .instruction-text { font-style: italic; color: #999; font-size: 0.85em}
 .instruction-text:hover { font-style: italic; color: #000; font-size: 0.85em}
@@ -135,7 +135,7 @@ ul.itemnav li span.dev-prop-val { text-align:left; width:70%;}
 .operation-property-key {font-weight: bold;margin-top:2px;}
 .configRow span {float: left;}
 .configRow div {float: right;}
-#holdActionStage {margin:20px; padding:0 0 20px;}
+#holdActionStage {margin:20px; padding:0 0 20px;min-width:815px;}
 #holdActionUI {border:none; width:100%; overflow: auto;}
 
 /* missing field container */
