--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/videoplayer.css
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/videoplayer.css
@@ -17,10 +17,13 @@
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
+  background: #000000;
+  /* 
   background: #CCCCCC;
   background-image: -moz-linear-gradient(top, #CCCCCC, #000000);
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #CCCCCC),
     color-stop(1, #000000) );
+  */
   box-shadow: inset 0 15px 35px #000000;
 }
 
