--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/style.css
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/editor/style.css
@@ -202,6 +202,7 @@ a.secondaryButton:hover,a.secondaryButton:focus {
 
 #waveformImage {
   width: 100%;
+  height: 122px;
 }
 
 #splitSegments {
@@ -216,7 +217,7 @@ a.secondaryButton:hover,a.secondaryButton:focus {
   border-right: 1px solid #990000;
   float: left;
   height: 100%;
-  /*background-color: white; */
+  background-color: #FFFFFF;
   /* Firefox */
   -moz-box-sizing: border-box;
   /* WebKit */
@@ -229,7 +230,7 @@ a.secondaryButton:hover,a.secondaryButton:focus {
   border-right: 1px solid #990000;
   float: left;
   height: 100%;
-  /*background-color: white; */
+  background-color: #E8E8E8 !important;
   /* Firefox */
   -moz-box-sizing: border-box;
   /* WebKit */
@@ -241,19 +242,52 @@ a.secondaryButton:hover,a.secondaryButton:focus {
   filter:alpha(opacity=50); /* For IE8 and earlier */
 }
 
+.splitSegmentDisabled {
+  background-color: #787878;
+  opacity: 0.6 !important;
+  filter:alpha(opacity=60) !important; /* For IE8 and earlier */
+}
+
+.splitItem {
+  border: 1px solid black;
+  height: 50px;
+  margin: 1px;
+  overflow: hidden;
+  /* Firefox */
+  -moz-box-sizing: border-box;
+  /* WebKit */
+  -webkit-box-sizing: border-box;
+  /* Opera 9.5+, Google Chrome */
+  box-sizing: border-box;
+  position: relative;
+  z-index: 0;
+}
+
+.splitItemDiv {
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+  position: absolute;
+}
+
+.splitItemSelected {
+  /* border: 1px solid blue !important; */
+  background-color: #E8E8E8 !important;
+}
+
+.disabled {
+  background-color: #787878;
+  opacity: 0.2;
+  filter: alpha(opacity = 20); /* For IE8 and earlier */
+}
+
 .hover {
-  background-color: #C1CDCD;
+  background-color: #C0C0C0;
 }
 
 .hoverOpacity {
   opacity: 0.4;
   filter:alpha(opacity=40); /* For IE8 and earlier */
-}
-
-.splitSegmentDisabled {
-  background-color: gray;
-  opacity: 0.6 !important;
-  filter:alpha(opacity=60) !important; /* For IE8 and earlier */
 }
 
 .box_right {
@@ -281,21 +315,6 @@ a.secondaryButton:hover,a.secondaryButton:focus {
   margin-top: 2px;
 }
 
-.splitItem {
-  border: 1px solid black;
-  height: 50px;
-  margin: 1px;
-  overflow: hidden;
-  /* Firefox */
-  -moz-box-sizing: border-box;
-  /* WebKit */
-  -webkit-box-sizing: border-box;
-  /* Opera 9.5+, Google Chrome */
-  box-sizing: border-box;
-  position: relative;
-  z-index: 0;
-}
-
 .splitRemoverDiv {
   z-index: 1;
   position: absolute;
@@ -308,23 +327,6 @@ a.secondaryButton:hover,a.secondaryButton:focus {
 
 .splitAdderLink {
   height: 20px;
-}
-
-.splitItemDiv {
-  height: 100%;
-  width: 100%;
-  z-index: 0;
-  position: absolute;
-}
-
-.splitItemSelected {
-  /* border: 1px solid blue !important; */
-  background-color:#657BF7;
-}
-
-.disabled {
-  opacity: 0.2;
-  filter: alpha(opacity = 20); /* For IE8 and earlier */
 }
 
 .clipItem {
