--- a/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
@@ -5,11 +5,21 @@ img{border:0;}
 html{font:13px/1.231 arial,helvetica,clean,sans-serif; }
 ul,li {list-style: none;}
 input:focus, button:focus { outline: 1px #999 solid; }
-table tr td { background: white!important; color: black; }
+table tr td { background: white; color: black; }
 table tr.highlight td { background: #d1e8ff!important; color: black; }
 table tr:hover td { background: silver!important; color: black!important; }
 table tr:hover a { color: black!important; }
 table tr:hover a:hover { text-decoration: underline!important; }
+
+table tr:nth-child(even) td {
+  background: #E0E0E0 !important;
+  background-color: #E0E0E0 !important;
+}
+
+table tr:nth-child(odd) td {
+  background: #FFFFFF !important;
+  background-color: #FFFFFF !important;
+}
 
 .layout-centered { margin-left: auto; margin-right: auto}
 .layout-inline { display: inline-block; }
