MH-8100 Some UI improvements #3, function documentation correction

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
@@ -21,6 +21,14 @@ table tr:nth-child(odd) td {
   background-color: #FFFFFF !important;
 }
 
+table tr:nth-child(even):hover td {
+  background-color: silver !important;
+}
+
+table tr:nth-child(odd):hover td {
+  background-color: silver !important;
+}
+
 .layout-centered { margin-left: auto; margin-right: auto}
 .layout-inline { display: inline-block; }
 .layout-float-left { float: left; }
